codegen/ui_tests/rhai_fn_non_clonable_return.stderr
error[E0277]: the trait bound `NonClonable: Clone` is not satisfied
    --> $DIR/rhai_fn_non_clonable_return.rs:11:8
     |
11   | pub fn test_fn(input: f32) -> NonClonable {
     |        ^^^^^^^^^^^^^^^^^^^^^^^-----------
     |        |                      |
     |        |                      required by a bound introduced by this call
     |        the trait `Clone` is not implemented for `NonClonable`
     |
note: required by a bound in `rhai::Dynamic::from`
    --> $DIR/dynamic.rs:1122:30
     |
1122 |     pub fn from<T: Variant + Clone>(mut value: T) -> Self {
     |                              ^^^^^ required by this bound in `rhai::Dynamic::from`
